# cuda-fixnum

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
bench/: bench.cu
python/: CMakeLists.txt  cudapaillier.py  gentests.py
src/: array_view.hh  bench.cu  cuda_wrap.h  fixnum.cu  fixnum_array-streaming.cu  fixnum_array.cu  fixnum_array.h  hand.cu  hand.cuh  primitives.cu  slot_layout.cu  subwarp.cu  translator.cu  utils.cu  utils.cuh
src/array/: fixnum_array.cu  fixnum_array.h
src/fixnum/: default.cu  fixnum.cu  slot_layout.cu  warp_fixnum.cu  word_fixnum.cu
src/fixnum/internal/: primitives.cu  warp_fixnum_impl.cu
src/functions/: chinese.cu  divexact.cu  modexp.cu  modinv.cu  monty_mul.cu  monty_redc.cu  multi_modexp.cu  paillier_decrypt.cu  paillier_encrypt.cu  quorem.cu  quorem_preinv.cu  set_const.cu  square.cu
src/functions/internal/: modexp_impl.cu
src/kernels/: divexact.cu  ec_add.cu
src/modnum/: modnum_monty_cios.cu  modnum_monty_redc.cu  monty_mul.cu  monty_redc.cu
src/modnum/internal/: monty.cu
src/util/: cuda_wrap.h  gmp_utils.cc  gmp_utils.h  managed.cu  primitives.cu
tests/: gentests.py  sexp.cc  sexp.h  test-suite.cu
